1) Minor fixes in dockerfile

--- a/generators/app/templates/Dockerfile
+++ b/generators/app/templates/Dockerfile
@@ -27,11 +27,7 @@ RUN \
      build-essential && \
 
   # install node.js
-  curl -sL https://deb.nodesource.com/setup_4.x | bash && \
-  apt-get install -y nodejs && \
-
-  # upgrade npm
-  npm install -g npm && \
+  apt-get install -y npm nodejs-legacy && \
 
   # install yeoman bower gulp
   npm install -g \
@@ -48,9 +44,6 @@ RUN \
 
 # add the dipforge template from the context directory
 ADD dipforge /home/dipforge/dipforge
-
-# copy sources
-#COPY . /home/jhipster/generator-jhipster
 
 # change the permissions for the dipforge directory
 RUN \
