1) added the ability to register projects. 2) added a jenkins file for deployment

--- a/generators/app/templates/Dockerfile
+++ b/generators/app/templates/Dockerfile
@@ -4,6 +4,7 @@ MAINTAINER Brett Chaldecott <brett.chaldecott@gmail.com>
 # run command
 RUN \
   apk add --update bash && \
+  apk add --update curl && \
   rm -rf /var/cache/apk/* && \
   mkdir -p /home/dipforge/dipforge 
 
